# ayoub

./: .env  .gitignore  Ayoub Conse PaaS.postman_collection.json  Cargo.toml  DEV.info  DEV_INFO  Discord.info  Event.postman_collection  NEAR.rules  NOW  README.md  ayoub.sh  deploy.sh
.VSCodeCounter/2022-09-08_01-16-36/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
FaaS/: Cargo.toml  README.md
FaaS/src/: _mod.rs  lib.rs  main.rs  rt.rs
FaaS/src/client/: Cargo.toml  README.md  lib.rs
FaaS/src/runtime/: Cargo.toml  README.md
PaaS/: .env  Cargo.toml  README.md  ayoub.sh
PaaS/src/: constants.rs  contexts.rs  controllers.rs  main.rs  middlewares.rs  routers.rs  schemas.rs  services.rs  utils.rs
PaaS/src/contexts/: actor.rs  app.rs  bot.rs  rafael.rs  scheduler.rs  unixerr.rs
PaaS/src/controllers/: event.rs  hoopoe.rs  nft.rs
PaaS/src/controllers/auth/: check_otp.rs  check_token.rs  home.rs  login.rs  otp_request.rs  signup.rs  user.rs
PaaS/src/controllers/event/: _404.rs  add.rs  cancel.rs  delete.rs  expire.rs  get.rs  lock.rs  phase.rs  reserve.rs  reveal.rs  simd.rs  vote.rs
PaaS/src/controllers/game/: deck.rs  group.rs  last_move.rs  player.rs  role.rs  side.rs
PaaS/src/controllers/nft/: init.rs  mint.rs  view.rs
PaaS/src/protocols/rpc/: server.rs
PaaS/src/routers/: auth.rs  event.rs  game.rs  nft.rs
PaaS/src/runtime/: Cargo.toml  README.md  build.sh  index.html  index.js  lib.rs
PaaS/src/schemas/: auth.rs  event.rs  game.rs
PaaS/src/services/: auth.rs  event.rs  game.rs  nft.rs
PaaS/src/wasi/: Cargo.toml  README.md  build.sh
PaaS/src/wasi/src/: lib.rs
PaaS/src/wasi/src/client/: README.md  constants.rs  lib.rs
PaaS2/: Cargo.toml
PaaS2/src/: constants.rs  contexts.rs  controllers.rs  main.rs  middlewares.rs  utils.rs
PaaS2/src/_services/: README.md  event.rs  game.rs
PaaS2/src/contexts/: app.rs  rafael.rs
PaaS2/src/controllers/: event.rs  game.rs
PaaS2/src/routers/: auth.rs  event.rs  game.rs
PaaS2/src/schemas/: event.rs  game.rs
_backups/: .pgpass  .rules  README.md  backup  cmd.sh
_backups/collections/: decks.json  events.json  groups.json  roles.json  sides.json  users.json
_backups/conf/: README.md  api  api.auth.ayoub.com.conf  api.ayoub.com.conf  api.event.ayoub.com.conf  api.game.ayoub.com.conf
_bitdefi/: .env  Cargo.toml  Fishuman.postman_collection.json  README.md
_bitdefi/src/: apis.rs  schemas.rs  utils.rs
_bitdefi/src/apis/: fishuman.rs
_conf/: api.ayoub.com.conf
_docs/: rust.rules
_smarties/: Cargo.toml  README.md
_smarties/src/: entrypoints.rs  processor.rs
_trash/: _hypervice.rs
auth/: Cargo.toml
auth.ayoub/: README.md
auth/src/utils/: jwt.rs
ayoub/: Cargo.toml  README.md
ayoub/src/: controllers.rs  main.rs  middlewares.rs  routers.rs  schemas.rs  services.rs  utils.rs
ayoub/src/contexts/: app.rs
ayoub/src/controllers/: auth.rs  event.rs
ayoub/src/routers/: auth.rs  event.rs  fishuman.rs
ayoub/src/schemas/: event.rs  user.rs
ayoub/src/services/: auth.rs  fishuman.rs
bitdefi/: .gitignore  Cargo.toml  Fishuman.postman_collection.json  README.md
bitdefi/src/: constants.rs  contexts.rs  main.rs  utils.rs
coiniXerr/: .env  Cargo.toml  README.md
coiniXerr/src/: actors.rs  apis.rs  lib.rs  main.rs  protocols.rs  rtp.rs  schemas.rs  utils.rs
coiniXerr/src/actors/: ddos.rs  parathread.rs  peer.rs  rafael.rs  unixerr.rs
coiniXerr/src/apis/: rest.rs  rpc.rs
coiniXerr/src/apis/rest/: wallet.rs
coiniXerr/src/engine/: codec.rs
coiniXerr/src/engine/codec/: encoder.rs
coiniXerr/src/engine/cvm/: stack.rs
coiniXerr/src/protocols/broker/rabbitmq/: app.rs
coiniXerr/src/protocols/p2p/udp/: app.rs
coiniXerr/src/protocols/rpc/: server.rs
coiniXerr/src/protocols/ws/: server.rs
coiniXerr/src/rtp/: broker.rs  mq.rs
coiniXerr/src/rtp/broker/: rabbitmq.rs
coiniXerr/src/rtp/broker/rabbitmq/: app.rs  publishers.rs
coiniXerr/src/rtp/broker/rabbitmq/publishers/: hoopoe.rs
coiniXerr/src/rtp/mq/: hoopoe.rs
coiniXerr/src/rtp/mq/consumers/: hoopoe.rs  wallexerr.rs
coiniXerr/src/rtp/mq/publishers/: hoopoe.rs
coiniXerr/src/rtp/p2p/udp/: app.rs
coiniXerr/src/utils/: api.rs  jobq.rs  res.rs  scheduler.rs
coiniXerr/src/wallet/: README.md
coiniXerr/src/wasi/: README.md
coiniXerr/src/wasi/src/: main.rs
escrow/: Cargo.toml  README.md  build.sh  deploy.sh
escrow/src/: lib.rs
event/: Cargo.toml  README.md  build.sh  deploy.sh
event.ayoub/: README.md
game.ayoub/: README.md
market/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
market/src/: approval.rs  constants.rs  enumeration.rs  events.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_callbacks.rs  nft_core.rs  royalty.rs  sale.rs  storage.rs  utils.rs
nft/: Cargo.toml  README.md  build.sh  deploy.sh  test.sh
nft/src/: approval.rs  constants.rs  enumeration.rs  events.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs  utils.rs
onion/: .env  Cargo.toml  README.md
onion/src/: constants.rs  exploit.rs  exploits.rs  lib.rs  main.rs  scheduler.rs  utils.rs
proposal/: Cargo.toml  README.md  build.sh  deploy.sh
proposal/src/: lib.rs
solaracts/: DEV_INFO
solaracts/src/: lib.rs  processor.rs
src/: constants.rs  contexts.rs  controllers.rs  main.rs  middlewares.rs  routers.rs  schemas.rs  services.rs  utils.rs
src/bluerangene/: Cargo.toml  DEV_INFO  NOW  README.md  build.sh  deploy.sh  test.sh
src/contexts/: app.rs  bot.rs  rafael.rs
src/controllers/: auth.rs  event.rs  fishuman.rs  game.rs  nft.rs
src/routers/: auth.rs  event.rs  game.rs
src/runtime/: Cargo.toml  README.md
src/schemas/: auth.rs  event.rs  game.rs  player.rs
src/services/: auth.rs  event.rs  fishuman.rs  game.rs  nft.rs
src/smarties/: DEV_INFO  README.md
src/smarties/nearacts/: Cargo.toml  DEV_INFO  README.md
src/smarties/nearacts/src/: lib.rs  utils.rs
src/solaracts/: Cargo.toml  DEV_INFO
suproxy/: README.md
tests/: Cargo.toml
tests/src/: lib.rs  main.rs  scheduler.rs
w2e/: Cargo.toml  README.md  build.sh  deploy.sh
(+75 files in other folders)
