[package]
name = "rafael"
version = "0.1.0"
edition = "2021"


[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
borsh = "0.9.3"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }




[[bin]]
name = "rafael"
path = "src/main.rs"