[package]
name = "ayoub"
version = "0.1.0"
edition = "2021"




[dependencies]
solana-client = "1.9.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.19"
pretty_env_logger = "0.4.0"
bytes = "1"
hex = "0.4.3"
dotenv = "0.15.0"
log = "0.4"
jsonwebtoken = "7"
mongodb = "2.1.0"
rust-argon2 = "1.0.0"




[[bin]]
name = "ayoub"
path = "src/main.rs"