[package]
name = "coiniXerr"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2021"



[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-web = "4"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
listenfd = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
borsh = "0.9.3"
hex = "0.4"
futures = "0.3"
bcrypt = "0.1"
rust-argon2 = "1"
rand = "0.8"



[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"



[[bin]]
name = "coiniXerr"
path = "src/main.rs"
