[package]
name = "onion"
version = "0.1.0"
edition = "2021"





[dependencies]
borsh = "0.9.3"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
riker = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"


[[bin]]
name = "onion"
path = "src/main.rs"


[lib]
name = "utils"
path = "src/lib.rs"