[package]
name = "tests"
version = "0.1.0"
edition = "2021"





[dependencies]
borsh = "0.9.3"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }



[[bin]]
name = "tests"
path = "src/main.rs"


[lib]
name = "utils"
path = "src/lib.rs"