[package]
name = "rafael"
version = "0.1.0"
edition = "2021"




[dependencies]
borsh = "0.9.3"
serde_json = "1"
pretty_env_logger = "0.4"
bytes = { version = "1", features = ["serde"] }
hex = "0.4"
dotenv = "0.15"
log = "0.4"
jsonwebtoken = "8"
rust-argon2 = "1"
lazy_static = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"




[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]






[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files
crate-type = ["cdylib", "rlib"]
name = "rafael"
path = "lib.rs"
