[package]
name = "nearacts"
version = "0.1.0"
authors = ["WILDONION <marefimoghaddam@unixerr.com>"]
edition = "2021"




[dependencies]
near-sdk = "3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = {version = "1", features = ["derive"] }





[lib]
crate-type = ["cdylib", "rlib"]





[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true